--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <style>
         body {
-            background-color: purple;
+            background-color: lightgreen;
         }
     </style>
 </head>
