--- a/index.html
+++ b/index.html
@@ -19,5 +19,8 @@
     <div>
         <a href="cupcakes.html">My cupcakes</a>
     </div>
+    <div>
+        <a href="Pizza-Pamphlet.html">My Pizza-pamphlet</a>
+    </div>
 </body>
 </html>
